<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_review">Add review</string>
    <string name="show_reviews">Show reviews</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name = "dollar">$</string>
    <string name = "prefixPrice">Price:</string>
    <string name = "prefixRate">Rate:</string>
    <string name = "nav_deep_link_to_reviews_fragment">android-app://com.example.coolshop.reviews.ui/showingReviewsFragment/%1$d </string>
</resources>
