<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailsToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/details_toolbar_height"
        android:background="@color/cream"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pngwing"
        android:background="#00000000"
        android:paddingBottom="@dimen/details_btn_back_padding_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/details_toolbar_title_margin_start"
        android:text="Product"
        android:fontFamily="@font/family"
        android:textColor="@color/black"
        android:textSize="@dimen/details_toolbar_title_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_back"
        app:layout_constraintStart_toStartOf="@+id/button_back"
        app:layout_constraintTop_toTopOf="@+id/button_back" />
    </androidx.appcompat.widget.Toolbar>

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/details_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/detailsToolbar">

    <TextView
        android:id="@+id/detailsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/details_title_size"
        android:text="title"
        android:layout_marginTop="@dimen/details_title_margin_top"
        tools:text="title" />

    <ImageView
        android:id="@+id/detailsProductImage"
        android:layout_marginTop="@dimen/details_image_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detailsDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_desc_margin_top"
        android:textSize="@dimen/details_desc_size"
        tools:text="description" />

    <TextView
        android:id="@+id/productCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/details_category_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_linear_layout_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detailsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:textSize="@dimen/details_price_size" />

        <TextView
            android:id="@+id/detailsRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/rate_details_margin"
            android:text="@string/rating"
            android:textSize="@dimen/details_rate_size" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialogShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:textColor="@color/white"
            android:text="@string/add_review" />
        <Button
            android:id="@+id/button_show_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:layout_marginStart="@dimen/details_btn_show_reviews_margin_start"
            android:textColor="@color/white"
            android:text="@string/show_reviews"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/add_to_cart" />
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
